--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,11 +7,12 @@
       <div class="header-icons">
         <a aria-label="Email" href="mailto:{{ site.email }}"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/in/raphaelwdrf"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
-        <a aria-label="GoodReads" target="_blank" href="https://www.goodreads.com/raphaelwdrf"><i class="icon fa-solid fa-book" aria-hidden="true"></i></a>
-        <a aria-label="Spotify" target="_blank" href="https://open.spotify.com/user/31b7gknglx3todwijocgvavw5hju"><i class="icon fab fa-spotify" aria-hidden="true"></i></a>
-        <br>
-        <a aria-label="Currículo Resumo" target="_blank" href="https://raphaelwdrf.github.io/links/assets/files/cv-RaphaelFranca_sucinto.pdf"><i class="icon fa-regular fa-file-pdf" aria-hidden="true"></i></a>
-        <a aria-label="Currículo Detalhado" target="_blank" href="https://raphaelwdrf.github.io/links/assets/files/cv-RaphaelFranca.pdf"><i class="icon fa-solid fa-file-pdf" aria-hidden="true"></i></a>
+        <a aria-label="GoodReads" target="_blank" href="https://www.goodreads.com/raphaelwdrf"><i class="icon fa fa-book" aria-hidden="true"></i></a>
+        <a aria-label="Spotify" target="_blank" href="https://open.spotify.com/user/31b7gknglx3todwijocgvavw5hju"><i class="icon fa fa-spotify" aria-hidden="true"></i></a>
+        <p>
+        <a aria-label="Currículo Resumo" target="_blank" href="https://raphaelwdrf.github.io/links/assets/files/cv-RaphaelFranca_sucinto.pdf"><i class="icon fa fa-file-pdf-o" aria-hidden="true"></i></a>
+        <a aria-label="Currículo Detalhado" target="_blank" href="https://raphaelwdrf.github.io/links/assets/files/cv-RaphaelFranca.pdf"><i class="icon fa fa-file-pdf-o" aria-hidden="true"></i></a>
+        </p>
 
       </div>
       <div class="header-links">
