--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,11 +9,11 @@
         <a aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/in/raphaelwdrf"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
         <a aria-label="GoodReads" target="_blank" href="https://www.goodreads.com/raphaelwdrf"><i class="icon fa fa-book" aria-hidden="true"></i></a>
         <a aria-label="Spotify" target="_blank" href="https://open.spotify.com/user/31b7gknglx3todwijocgvavw5hju"><i class="icon fa fa-spotify" aria-hidden="true"></i></a>
-        <p>
+      </div>
+      <div class="header-icons">
+        <h3>Currículo</h3>
         <a aria-label="Currículo Resumo" target="_blank" href="https://raphaelwdrf.github.io/links/assets/files/cv-RaphaelFranca_sucinto.pdf"><i class="icon fa fa-file-pdf-o" aria-hidden="true"></i></a>
         <a aria-label="Currículo Detalhado" target="_blank" href="https://raphaelwdrf.github.io/links/assets/files/cv-RaphaelFranca.pdf"><i class="icon fa fa-file-pdf-o" aria-hidden="true"></i></a>
-        </p>
-
       </div>
       <div class="header-links">
         <!-- <a class="link" href="#about" data-scroll>About Me</a> -->
