--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,6 @@
 <div class="user-details">
   <h1>Perfil Profissional</h1>
+  <p><h2><em>Liderança que desenvolve pessoas, estrutura processos e impulsiona resultados.</em></h2></p>
   <p>{{ site.user_description }}</p>
 </div>
 <div class="user">
