--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <div class="user-details">
   <h1>História Profissional</h1>
-  <br><h2>Liderança que desenvolve pessoas, estrutura processos e impulsiona resultados.</h2>
+  <h3><em>Liderança que desenvolve pessoas, estrutura processos e impulsiona resultados.</em></h3>
   <p>{{ site.user_description }}</p>
 </div>
 <div class="user">
