--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         <a aria-label="GoodReads" target="_blank" href="https://www.goodreads.com/raphaelwdrf"><i class="icon fa fa-book" aria-hidden="true"></i></a>
         <a aria-label="Spotify" target="_blank" href="https://open.spotify.com/user/31b7gknglx3todwijocgvavw5hju"><i class="icon fa fa-spotify" aria-hidden="true"></i></a>
       </div>
-      <h2><span class="site-description"><em>Curriculum vitae<em></span></h2>
+      <h2><span class="site-description"><em>Curriculum vitae</em></span></h2>
       <div class="header-icons">
         <a aria-label="Currículo Resumo" target="_blank" href="https://raphaelwdrf.github.io/hub/assets/files/cv-RaphaelFranca_sucinto.pdf"><i class="icon fa fa-file-pdf-o" aria-hidden="true"></i></a>
         <a aria-label="Currículo Detalhado" target="_blank" href="https://raphaelwdrf.github.io/hub/assets/files/cv-RaphaelFranca.pdf"><i class="icon fa fa-file-pdf-o" aria-hidden="true"></i></a>
